fixed: text align

--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -51,6 +51,7 @@
 
 .date {
   font-size: 10px;
+  text-align: center;
 }
 
 .dayName {
